fixed background image display issue on `macOS` client by changing `z-index` to `0` from `-1`

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,7 @@ body {
     height: 100%;
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: 0;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
